# cloud_class

./: .gitignore  Cargo.toml  Cloud_class.db  LICENSE  Makefile  README.md  Users.db  setup.sh
.github/workflows/: devskim.yml  rust-clippy.yml
containers/docker/: Dockerfile
containers/docker/.streamlit/: config.toml
design_files/: cloud_class_db.dia  sqlite.sql
docker/: Dockerfile
src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
src/admin/: mod.rs
src/admin/control/: header.rs  mod.rs
src/admin/control/header/: mod.rs
src/admin/control/instructors/: mod.rs
src/admin/login/: mod.rs
src/courses/: content.rs  mod.rs
src/examadmin/: mod.rs
src/header/: mod.rs
src/home/: about.rs  collaboration.rs  contact.rs  header.rs  instructor_list.rs  mod.rs
src/instructor/: mod.rs
src/instructor/account/login/: mod.rs
src/landing/: mod.rs
src/login/: mod.rs
src/session/: cache.rs  cookie.rs  mod.rs
src/session/cookie/: mod.rs
src/state/: mod.rs
src/student/account/: login.rs  logout.rs  register.rs
src/student/account/login/: mobile.rs  mod.rs  qr.rs  username.rs
src/student/account/register/: errors.rs  mod.rs  validation.rs
src/student/profile/: mod.rs
src/student/profile/class/: mod.rs
src/student/profile/info/: mod.rs
src/tutorials/: console.rs  editor.rs  execution.rs  mod.rs  output.rs
src/user/account/: login.rs  logout.rs
src/user/account/login/: mobile.rs  qr.rs  username.rs
src/user/account/register/: mod.rs
src/user/profile/: mod.rs
src/user/profile/class/: mod.rs
src/user/profile/info/: mod.rs
src/user/profile/personal/: mod.rs
src/utils/: crypto.rs  date.rs  db.rs  mod.rs  rapid.rs  redis.rs  regex.rs  sanitizer.rs  uuid.rs
style/: main.scss
